--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
         <div class="box">
             <div class="box-content">
                 <h3>Home décor under $50</h3>
-                <div class="box-img" style="background-image: url('Box1_Image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/Box1_Image.jpg');"></div>
                 <p><a>See more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Toys under $25</h3>
-                <div class="box-img" style="background-image: url('Box2_Image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/Box2_Image.jpg');"></div>
                 <p><a>See more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Personal Care under $25</h3>
-                <div class="box-img" style="background-image: url('Box7_Image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/Box7_Image.jpg');"></div>
                 <p><a>See more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Player's paradise starts here</h3>
-                <div class="box-img" style="background-image: url('Box5_Image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/Box5_Image.jpg');"></div>
                 <p><a>See more</a></p>
             </div>
         </div>
@@ -107,28 +107,28 @@
         <div class="box">
             <div class="box-content">
                 <h3>Shop activity trackers and smartwatches</h3>
-                <div class="box-img" style="background-image: url('Box4_Image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/Box4_Image.jpg');"></div>
                 <p><a>See more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Deals on Mackup Product</h3>
-                <div class="box-img" style="background-image: url('Box3_Image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/Box3_Image.jpg');"></div>
                 <p><a>See more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Deals in PCs</h3>
-                <div class="box-img" style="background-image: url('Box8_Image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/Box8_Image.jpg');"></div>
                 <p><a>See more</a></p>
             </div>
         </div>
         <div class="box">
             <div class="box-content">
                 <h3>Deals on shoes</h3>
-                <div class="box-img" style="background-image: url('Box6_Image.jpg');"></div>
+                <div class="box-img" style="background-image: url('/Images/Box6_Image.jpg');"></div>
                 <p><a>See more</a></p>
             </div>
         </div>
